# climatiq

./: .gitignore  CONTRIBUTING.md  EMERGENCY_REDESIGN_COMPLETE.md  LICENSE  PR_DESCRIPTION.md  PR_DESCRIPTION_HA_DEVICE.md  PR_EMERGENCY_REDESIGN.md  README.md  TASK_COMPLETION_SUMMARY.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
appdaemon/: README.md
appdaemon/apps/: climatiq.yaml  climatiq_controller.py
climatiq/: config.py
climatiq/analysis/: __init__.py  cycling_detector.py
climatiq/appdaemon/: __init__.py  climatiq_app.py  hvac_optimizer_app.py
climatiq/core/: __init__.py  analyzer.py  controller.py  observer.py  predictor.py
climatiq/data/: influx_v1_client.py
climatiq/models/: __init__.py
config/: apps.yaml.example  config.example.yaml
data/: .gitkeep
docs/: APPDAEMON_SETUP.md  CONCEPT.md  CONTROLLER.md  DEVELOPMENT.md  MULTI_DEVICE.md  PLAN.md  PROJECT_STATUS.md  SPRINT4.md
docs/research/: ANALYSIS.md  feature_importance.csv  feature_importance_causal.csv  feature_importance_gmm.csv  power_30days.csv  power_last_5days.csv  stable_zones_config.json
hvac_optimizer/: __init__.py
hvac_optimizer/appdaemon/: hvac_optimizer_app.py
hvac_optimizer/control/: __init__.py
hvac_optimizer/core/: __init__.py  analyzer.py  controller.py  entities.py  observer.py
hvac_optimizer/data/: influx_client.py
models/: .gitkeep
scripts/: analyze_cycling.py  analyze_live_data.py  analyze_transitions.py  auto_stable_zones.py  deep_transition_analysis.py  full_stability_analysis.py  night_report.py  sprint3_2_ml_analysis.py  sprint3_2_v2_gmm_labeling.py  sprint3_2_v3_causal_analysis.py  stability_analysis_complete.py  stability_transition_analysis.py  test_analyzer_controller.py  test_connection.py  test_full_pipeline.py  test_pipeline_5days.py  test_pipeline_optimized.py  test_sprint4_final.py  validate_analyzer_v2.py
tests/: __init__.py
tests/unit/: __init__.py  test_analyzer.py  test_controller.py  test_controller_emergency_override.py  test_controller_multi_device.py  test_controller_v2.py  test_device_sensors.py  test_influx_v1_client.py  test_observer.py  test_predictor.py
